fixed compatability issues on Safari (but oddly not firefox)

--- a/_sass/_photosphere.scss
+++ b/_sass/_photosphere.scss
@@ -6,7 +6,7 @@
 }
 
 canvas {
-    cursor: all-scroll;
+    cursor: url('{{site.baseurl}}/images/all-scrollCursor.png'), all-scroll;
 }
 
 #photosphere-background img {
