--- a/_sass/_portfolio.scss
+++ b/_sass/_portfolio.scss
@@ -18,6 +18,7 @@ div#main-container {
     background-color:$trans-white;
     margin-bottom: 12px;
     border-radius: 5px;
+    position: relative;
  }
 
 .website_tile:last-of-type {
@@ -30,10 +31,18 @@ div#main-container {
   justify-content: center;
 }
 
+.siteImageContainer {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .siteImage {
   height: 236px;
   width: 236px;
-  position: absolute;
 }
 
 div.title, div.title > a {
